--- a/services.html
+++ b/services.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="css/index.css">
+    <title>Services</title>
+    <link rel="stylesheet" href="css/services.css">
 </head>
 <body>
+    
     <nav class="nav-bar">
         <div class="logo">
             <a href="#">Aman</a>
         </div>
         <ul class="nav-links">
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
+            <li><a href="services.html" class="active">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="hamburger" onclick="toggleMenu()">
@@ -32,7 +33,7 @@
     <br/>
     <br/>
     <br/>
-    <div class="content">WELCOME TO HOME PAGE</div>
+    <div class="content">WELCOME TO SERVICES PAGE</div>
     <script src="js/script.js"></script>
 </body>
 </html>
